Updated Astro to v1.1.0, using mdx now instead of markdown, updated astro config, moved dependencies to devDependencies.

--- a/src/pages/posts/dreamhack-dallas-2022.mdx
+++ b/src/pages/posts/dreamhack-dallas-2022.mdx
@@ -1,5 +1,4 @@
 ---
-setup: import { Image } from '@astrojs/image/components'
 layout: ../../layouts/blogPost.astro
 title: DreamHack Dallas 2022
 description: Insight into my experience at DreamHack 2022 in Dallas, Texas.
@@ -7,6 +6,9 @@ draft: false
 author: CM-IV
 pubDate: Sun, 19 June 2022
 ---
+
+import { Image } from '@astrojs/image/components';
+
 **Day 1**
 
 DreamHack is a different world to me, as my friend and colleague introduced my to the entire concept of  professional gaming.  I was able to attain two tickets to the weekend-long event, and I made it into Dallas on the afternoon of the first day of the event (Friday, June 3rd).  The drive was not that bad, only a straight route on the freeway with the occasional stop for a gas refill and snacks/refreshments.
