--- a/src/pages/posts/gitea-self-hosted.mdx
+++ b/src/pages/posts/gitea-self-hosted.mdx
@@ -1,6 +1,4 @@
 ---
-setup: |
-  import { Image } from '@astrojs/image/components'
 title: "Locally host your own code repositories with lightweight Gitea"
 description: "Gitea is a tiny alternative to GitHub written in Go, I'll show you how to use it."
 pubDate: "Wed, 11 May 2022"
@@ -8,6 +6,7 @@ author: "CM-IV"
 layout: "../../layouts/blogPost.astro"
 draft: false
 ---
+import { Image } from '@astrojs/image/components';
 
 [Gitea](https://gitea.io/en-us/) is called "Git with a cup of tea", since it is written in Go, lightweight, and fast.  It can run anywhere the code can be compiled for, in our case though it can run wherever a Docker container can be run.
 
