--- a/src/pages/posts/file-browser.mdx
+++ b/src/pages/posts/file-browser.mdx
@@ -1,6 +1,4 @@
 ---
-setup: |
-  import { Image } from '@astrojs/image/components'
 title: "Self hosting a file browser and manager."
 description: "Use File-Browser software to self host and manage files on headless Linux servers.  Follow the link in the title to learn more."
 pubDate: "Mon, 6 Dec 2021"
@@ -8,6 +6,7 @@ author: "CM-IV"
 layout: "../../layouts/blogPost.astro"
 draft: false
 ---
+import { Image } from '@astrojs/image/components';
 
 If you've got a home server or homelab running linux headlessly, you may want to have a simple web user interface to
 see that file system. The software called [File Browser](https://filebrowser.org/) has got you covered. The nice
