Updated astro to v1.1.5, updated image and mdx devDependencies.

--- a/src/pages/posts/web-image-optimizer-for-conversions-and-image-shrinking-in-one-place.mdx
+++ b/src/pages/posts/web-image-optimizer-for-conversions-and-image-shrinking-in-one-place.mdx
@@ -19,7 +19,7 @@ So I got tired of having to visit separate websites whenever I wanted to convert
 At the time I was already familiar with using ViteJS in my web stack tool-box, so I searched through GitHub to see if there was a way to use it on the frontend of an ElectronJS application.  I love using ViteJS during development since it greatly speeds things up for me, not to mention CRA is over 5 years old at this point.
 
 
-<Image class="image" src="https://ik.imagekit.io/xbkhabiqcy9/img/wio_r0nJDt3jS.webp?ik-sdk-version=javascript-1.4.3&updatedAt=1659720463963" width={860} height={392} alt="Web Image Optimizer Photo 1" />
+<Image class="image" alt="web-image-optimizer-1" src="https://ik.imagekit.io/xbkhabiqcy9/img/wio_r0nJDt3jS.webp?ik-sdk-version=javascript-1.4.3&updatedAt=1659720463963" width={860} height={392} alt="Web Image Optimizer Photo 1" />
 
 Pictured above is the UI of the application with Bulma CSS styling.  I chose to use PreactJS as the frontend framework in order to keep the overall amount of JavaScript there at a reasonable level.
 
