Uninstall @astrojs/image, updated mdx and astro

--- a/src/pages/posts/gitea-self-hosted.mdx
+++ b/src/pages/posts/gitea-self-hosted.mdx
@@ -6,11 +6,10 @@ author: "CM-IV"
 layout: "../../layouts/blogPost.astro"
 draft: false
 ---
-import { Image } from '@astrojs/image/components';
 
 [Gitea](https://gitea.io/en-us/) is called "Git with a cup of tea", since it is written in Go, lightweight, and fast.  It can run anywhere the code can be compiled for, in our case though it can run wherever a Docker container can be run.
 
-<Image class="image" alt="gitea-image-1" src="https://ik.imagekit.io/xbkhabiqcy9/img/gitea_59262IRyj.webp?ik-sdk-version=javascript-1.4.3&updatedAt=1652312437020" width={860} height={392} alt="Whoogle Search Image" />
+<img class="image" alt="gitea-image-1" src="https://ik.imagekit.io/xbkhabiqcy9/img/gitea_59262IRyj.webp?ik-sdk-version=javascript-1.4.3&updatedAt=1652312437020" width={860} height={392} alt="Whoogle Search Image" />
 
 Gitea has a [page](https://gitea.com/gitea/awesome-gitea#user-content-devops) in their documentation discussing the different integrations available.  I prefer to use the [Woodpecker](https://github.com/woodpecker-ci/woodpecker) CI system with Gitea, and I was able to follow their excellent [documentation](https://woodpecker-ci.org/docs/intro) when setting it up.  I know there is not a whole lot of information out there when in comes to Woodpecker, so in a later article I will discuss setting up TLS encryption on your own VPN mesh network for both Gitea and Woodpecker CI.
 
