--- a/src/pages/posts/web-image-optimizer-for-conversions-and-image-shrinking-in-one-place.mdx
+++ b/src/pages/posts/web-image-optimizer-for-conversions-and-image-shrinking-in-one-place.mdx
@@ -12,14 +12,13 @@ draft: false
 author: CM-IV
 pubDate: Fri, 5 Aug 2022
 ---
-import { Image } from '@astrojs/image/components';
 
 So I got tired of having to visit separate websites whenever I wanted to convert my images into WebP format and optimize them into smaller sizes.  I started to look into ElectronJS for making a desktop app that would tackle this problem for me.
 
 At the time I was already familiar with using ViteJS in my web stack tool-box, so I searched through GitHub to see if there was a way to use it on the frontend of an ElectronJS application.  I love using ViteJS during development since it greatly speeds things up for me, not to mention CRA is over 5 years old at this point.
 
 
-<Image class="image" alt="web-image-optimizer-1" src="https://ik.imagekit.io/xbkhabiqcy9/img/wio_r0nJDt3jS.webp?ik-sdk-version=javascript-1.4.3&updatedAt=1659720463963" width={860} height={392} alt="Web Image Optimizer Photo 1" />
+<img class="image" alt="web-image-optimizer-1" src="https://ik.imagekit.io/xbkhabiqcy9/img/wio_r0nJDt3jS.webp?ik-sdk-version=javascript-1.4.3&updatedAt=1659720463963" width={860} height={392} alt="Web Image Optimizer Photo 1" />
 
 Pictured above is the UI of the application with Bulma CSS styling.  I chose to use PreactJS as the frontend framework in order to keep the overall amount of JavaScript there at a reasonable level.
 
