Update Post “self-hosted-server-monitoring-with-glances”

--- a/src/pages/posts/self-hosted-server-monitoring-with-glances.mdx
+++ b/src/pages/posts/self-hosted-server-monitoring-with-glances.mdx
@@ -9,11 +9,11 @@ pubDate: Thurs, 6 Oct 2022
 ---
 Check out *Glances* in order to monitor and keep track of your own homelab server.  I'm running this instance behind a Caddy reverse proxy, and I can access it through a Tailscale VPN.  The Caddy reverse proxy allows me to acquire TLS certificates for the VPN connection, even though they technically aren't needed.
 
-This instance of Glances that is runnning a webserver will be used to supply data to an instance of *Dashy* that I will make a post about in the future.  That will be the cool frontend to this Glances data collection program that I am self-hosting.
+This instance of Glances that is runnning a webserver will be used to supply data to an instance of *Dashy* that I will make a post about in the future.  That will be the cool frontend to this Glances data collection program.
 
 <img class="image" alt="glanges-image-1" src="https://ik.imagekit.io/xbkhabiqcy9/img/Glances_11C2N31f8.webp?ik-sdk-version=javascript-1.4.3&updatedAt=1665079251247" width={860} height={392}></img>
 
-Below this image is the docker-compose yaml file that I am using on my homelab in order to automate the docker container:
+Below this image is the docker-compose yaml file that I am using in order to automate the docker container:
 
 ```yml
 version: '3.3'
@@ -30,4 +30,4 @@ services:
         image: docker.io/nicolargo/glances
 ```
 
-This is all you'll need in order to get started collecting the data necessary for c reating a cool dashboard that keeps track of different metrics for your homelab.
+This is all you'll need in order to get started collecting the data necessary for creating a cool dashboard that keeps track of different metrics for your homelab.
