Updated astri to v1.4.5

--- a/src/pages/posts/self-hosted-server-monitoring-with-glances.mdx
+++ b/src/pages/posts/self-hosted-server-monitoring-with-glances.mdx
@@ -15,7 +15,7 @@ This instance of Glances that is runnning a webserver will be used to supply dat
 
 Below this image is the docker-compose yaml file that I am using in order to automate the docker container:
 
-```yml
+```yaml
 version: '3.3'
 services:
     nicolargo:
