Update Post “self-host-your-own-website-analytics”

--- a/src/pages/posts/self-host-your-own-website-analytics.mdx
+++ b/src/pages/posts/self-host-your-own-website-analytics.mdx
@@ -14,7 +14,7 @@ A﻿ll that is needed for the analytics to work on your website is one simple Ja
 
 H﻿ere's the yml file that will be used for the containers:
 
-`﻿``
+`﻿``yaml
 version: '3'
 services:
   umami:
