Change img aspect ratio for rss feed post

--- a/src/pages/posts/self-hosted-rss-feed-aggregator-freshrss.mdx
+++ b/src/pages/posts/self-hosted-rss-feed-aggregator-freshrss.mdx
@@ -11,15 +11,15 @@ pubDate: Tues, 22 Nov 2022
 
 After first creating the docker-compose.yml file and starting up the container(s), you'll be greeted with this login page.  After logging in/creating an account, you'll be able to curate RSS feeds to your liking.  They will all aggregate to the front page and will be filterable.
 
-<img alt="freshRSS image 1" width={860} height={392} src="https://ik.imagekit.io/xbkhabiqcy9/img/Screenshot_2022-11-22_at_08-01-09_Login___FreshRSS_3jLdVFLzm.png?ik-sdk-version=javascript-1.4.3&updatedAt=1669125709880" />
+<img alt="freshRSS image 1" width={860} src="https://ik.imagekit.io/xbkhabiqcy9/img/Screenshot_2022-11-22_at_08-01-09_Login___FreshRSS_3jLdVFLzm.png?ik-sdk-version=javascript-1.4.3&updatedAt=1669125709880" />
 
 You can categorize the RSS feeds that you create by going into the subscription management menu.  I have categories for the various GNU+Linux and homelab news feeds that I'm interested in.  There's also an option to import/export feature where you can bring in other RSS feeds with JSON or OPML files.
 
-<img alt="freshRSS image 2" width={860} height={392} src="https://ik.imagekit.io/xbkhabiqcy9/img/Screenshot_2022-11-22_at_08-22-03__103__Main_stream___FreshRSS_aPkF2Ujbb.png?ik-sdk-version=javascript-1.4.3&updatedAt=1669126940053" />
+<img alt="freshRSS image 2" width={860} src="https://ik.imagekit.io/xbkhabiqcy9/img/Screenshot_2022-11-22_at_08-22-03__103__Main_stream___FreshRSS_aPkF2Ujbb.png?ik-sdk-version=javascript-1.4.3&updatedAt=1669126940053" />
 
 There's also a cool metrics dashboard that collects various information regarding the RSS feed entries.  Total entries and entries per category are graphed out and displayed on the dashboard.
 
-<img alt="freshRSS image 3" width={860} height={392} src="https://ik.imagekit.io/xbkhabiqcy9/img/Screenshot_2022-11-22_at_08-33-42_Statistics___FreshRSS_l_87zWnH2.png?ik-sdk-version=javascript-1.4.3&updatedAt=1669127639979" />
+<img alt="freshRSS image 3" width={860} src="https://ik.imagekit.io/xbkhabiqcy9/img/Screenshot_2022-11-22_at_08-33-42_Statistics___FreshRSS_l_87zWnH2.png?ik-sdk-version=javascript-1.4.3&updatedAt=1669127639979" />
 
 Here is the related docker-compose.yml file so that you can self host the program yourself:
 
